--- a/user-profile/package.json
+++ b/user-profile/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "express": "^5.1.0",
     "joi": "^17.13.3",
+    "pg": "^8.14.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "dotenv": "^16.5.0",
     "nodemon": "^3.1.9"
   }
 }
